[workspace]
members = [
    "../dora/apis/c/node",
    "../dora/apis/c/operator",
    "../dora/apis/c++/node",
    "../dora/apis/c++/operator",
    "../dora/apis/python/node",
    "../dora/apis/python/operator",
    "../dora/apis/rust/*",
    "../dora/apis/rust/operator/macros",
    "../dora/apis/rust/operator/types",
    "../dora/binaries/cli",
    "../dora/binaries/coordinator",
    "../dora/binaries/daemon",
    "../dora/binaries/runtime",
    "../dora/examples/rust-dataflow/node",
    "../dora/examples/rust-dataflow/status-node",
    "../dora/examples/rust-dataflow/sink",
    "../dora/examples/rust-dataflow/sink-dynamic",
    "../dora/examples/rust-ros2-dataflow/node",
    "../dora/examples/benchmark/node",
    "../dora/examples/benchmark/sink",
    "../dora/examples/multiple-daemons/node",
    "../dora/examples/multiple-daemons/operator",
    "../dora/examples/multiple-daemons/sink",
    "../dora/libraries/arrow-convert",
    "../dora/libraries/communication-layer/*",
    "../dora/libraries/core",
    "../dora/libraries/message",
    "../dora/libraries/shared-memory-server",
    "../dora/libraries/extensions/download",
    "../dora/libraries/extensions/telemetry/*",
    "../dora/node-hub/dora-record",
    "../dora/node-hub/dora-rerun",
    "../dora/libraries/extensions/ros2-bridge",
    "../dora/libraries/extensions/ros2-bridge/msg-gen",
    "../dora/libraries/extensions/ros2-bridge/python",
]

[workspace.package]
# Make sure to also bump `apis/node/python/__init__.py` version.
version = "0.3.5"
description = "`dora` goal is to be a low latency, composable, and distributed data flow."
documentation = "https://dora.carsmos.ai"
license = "Apache-2.0"

[workspace.dependencies]
dora-node-api = { version = "0.3.5", path = "../dora/apis/rust/node", default-features = false }
dora-node-api-python = { version = "0.3.5", path = "../dora/apis/python/node", default-features = false }
dora-operator-api = { version = "0.3.5", path = "../dora/apis/rust/operator", default-features = false }
dora-operator-api-macros = { version = "0.3.5", path = "../dora/apis/rust/operator/macros" }
dora-operator-api-types = { version = "0.3.5", path = "../dora/apis/rust/operator/types" }
dora-operator-api-python = { version = "0.3.5", path = "../dora/apis/python/operator" }
dora-operator-api-c = { version = "0.3.5", path = "../dora/apis/c/operator" }
dora-node-api-c = { version = "0.3.5", path = "../dora/apis/c/node" }
dora-core = { version = "0.3.5", path = "../dora/libraries/core" }
dora-arrow-convert = { version = "0.3.5", path = "../dora/libraries/arrow-convert" }
dora-tracing = { version = "0.3.5", path = "../dora/libraries/extensions/telemetry/tracing" }
dora-metrics = { version = "0.3.5", path = "../dora/libraries/extensions/telemetry/metrics" }
dora-download = { version = "0.3.5", path = "../dora/libraries/extensions/download" }
shared-memory-server = { version = "0.3.5", path = "../dora/libraries/shared-memory-server" }
communication-layer-request-reply = { version = "0.3.5", path = "../dora/libraries/communication-layer/request-reply" }
dora-runtime = { version = "0.3.5", path = "../dora/binaries/runtime" }
dora-daemon = { version = "0.3.5", path = "../dora/binaries/daemon" }
dora-coordinator = { version = "0.3.5", path = "../dora/binaries/coordinator" }
dora-ros2-bridge = { path = "../dora/libraries/extensions/ros2-bridge" }
dora-ros2-bridge-msg-gen = { path = "../dora/libraries/extensions/ros2-bridge/msg-gen" }
dora-ros2-bridge-python = { path = "../dora/libraries/extensions/ros2-bridge/python" }
dora-message = { version = "0.3.5", path = "../dora/libraries/message" }
arrow = { version = "52" }
arrow-schema = { version = "52" }
arrow-data = { version = "52" }
arrow-array = { version = "52" }
pyo3 = { version = "0.21", features = [
    "eyre",
    "abi3-py37",
    "multiple-pymethods",
] }
pythonize = "0.21"

[package]
name = "dora-examples"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[features]
# enables examples that depend on a sourced ROS2 installation
ros2-examples = []

[dev-dependencies]
eyre = "0.6.8"
tokio = "1.24.2"
dora-coordinator = { workspace = true }
dora-core = { workspace = true }
dora-message = { workspace = true }
dora-tracing = { workspace = true }
dora-download = { workspace = true }
dunce = "1.0.2"
serde_yaml = "0.8.23"
uuid = { version = "1.7", features = ["v7", "serde"] }
tracing = "0.1.36"
futures = "0.3.25"
tokio-stream = "0.1.11"

[[example]]
name = "c-dataflow"
path = "examples/c-dataflow/run.rs"

[[example]]
name = "rust-dataflow"
path = "examples/rust-dataflow/run.rs"

[[example]]
name = "rust-ros2-dataflow"
path = "examples/rust-ros2-dataflow/run.rs"
required-features = ["ros2-examples"]

# TODO: Fix example #192
[[example]]
name = "rust-dataflow-url"
path = "examples/rust-dataflow-url/run.rs"

[[example]]
name = "cxx-dataflow"
path = "examples/c++-dataflow/run.rs"

[[example]]
name = "python-dataflow"
path = "examples/python-dataflow/run.rs"

[[example]]
name = "python-ros2-dataflow"
path = "../dora_rviz/python-ros2-dataflow/run.rs"
required-features = ["ros2-examples"]

[[example]]
name = "python-operator-dataflow"
path = "examples/python-operator-dataflow/run.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark/run.rs"

[[example]]
name = "multiple-daemons"
path = "examples/multiple-daemons/run.rs"

[[example]]
name = "cmake-dataflow"
path = "examples/cmake-dataflow/run.rs"

[[example]]
name = "cxx-ros2-dataflow"
path = "examples/c++-ros2-dataflow/run.rs"
required-features = ["ros2-examples"]